# malp

./: README.md  bun.lockb  diffs  index.html  malp_conf.toml  package.json  shell.nix
src-tauri/: Cargo.toml  build.rs  pandoc_md_template.html  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html  main.js  main.ts  style.css
ui/web_components/: document-handle.ts  document-selector.ts  document-viewer.ts  main_page.ts  new-document-button.ts
